--- a/style.css
+++ b/style.css
@@ -101,3 +101,21 @@ body {
     text-decoration: line-through;
     color: var(--blue-light);
 }
+
+/* SECCION CLIMA */
+#clima {
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    font-family: 'Prompt', sans-serif; 
+    color: var(--white)
+}
+
+#box1, #box2, #box3 {
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
+    padding-top: 10px;
+    width: 100px;
+    height: 100px;
+}
